More Defkon Stuff...
Add settable Divebomb angle
Get cordium tracers working for the most part
begin setting up framework for single Cm gauge per CM type instead of per box
Fix Marquee reporting Killed By GM instead of last player to deal damage

--- a/BDArmory/BDArmory.csproj
+++ b/BDArmory/BDArmory.csproj
@@ -167,6 +167,7 @@
     <Compile Include="CounterMeasure\CMSmoke.cs" />
     <Compile Include="CounterMeasure\ModuleCloakingDevice.cs" />
     <Compile Include="CounterMeasure\ModuleECMJammer.cs" />
+    <Compile Include="CounterMeasure\VesselCMDropperInfo.cs" />
     <Compile Include="CounterMeasure\VesselChaffInfo.cs" />
     <Compile Include="CounterMeasure\VesselCloakInfo.cs" />
     <Compile Include="CounterMeasure\VesselECMJInfo.cs" />
